force-app/main/default/objects/Departure__c/Departure__c.object-meta.xml
<CustomObject>
    <label>Departure</label>
    <nameField>
        <displayFormat>NO-{0000}</displayFormat>
        <label>Departure No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>