force-app/main/default/objects/Departure__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>