force-app/main/default/objects/Departure__c/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated Consent</fullName>
            </value>
            <value>
                <fullName>No Valid Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>