force-app/main/default/objects/Departure__c/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated Date</label>
    <type>Date</type>
</CustomField>